fix: add restaurantEndpoint find byName
